--- a/NoBroker/Base.lproj/Main.storyboard
+++ b/NoBroker/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RiZ-ae-n6x">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bXF-ru-ABW">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -64,7 +64,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Quf-GH-y1B">
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3nR-MD-Nl0">
-                                        <frame key="frameInset" minX="2" minY="-23" width="371" height="173"/>
+                                        <frame key="frameInset" minX="2" minY="-77" width="371" height="227"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6vb-XX-hYa">
@@ -75,13 +75,13 @@
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="QSY-aD-osA" customClass="Property_Cell" customModule="TestApp" customModuleProvider="target">
-                                                <rect key="frame" x="64" y="27" width="250" height="120"/>
+                                                <rect key="frame" x="64" y="22" width="250" height="120"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                     <rect key="frame" x="0.0" y="0.0" width="250" height="120"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="236C6633-D4E6-46AD-AD19-D3BEFD233F96" translatesAutoresizingMaskIntoConstraints="NO" id="Ibc-zP-ahF">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="D7046493-7F09-4583-9F50-7729A36F4414" translatesAutoresizingMaskIntoConstraints="NO" id="Ibc-zP-ahF">
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="116" id="i8N-qi-C6k"/>
                                                                 <constraint firstAttribute="width" constant="108" id="uJM-Qh-CGa"/>
@@ -146,6 +146,7 @@
                             <constraint firstItem="eQR-0u-kPY" firstAttribute="leading" secondItem="6ni-E1-vsj" secondAttribute="leading" id="z6S-Oh-k4F"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="wje-a8-VZL"/>
                     <connections>
                         <outlet property="back" destination="eQR-0u-kPY" id="Swf-TB-4of"/>
                         <outlet property="collectionView" destination="3nR-MD-Nl0" id="IcM-rC-BcZ"/>
@@ -154,14 +155,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ohw-Pq-fKx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2120.8000000000002" y="134.48275862068968"/>
+            <point key="canvasLocation" x="3060" y="134.48275862068968"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="nE7-6X-AlF">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="o6X-OQ-DdJ" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="VmP-r2-LL3">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VmP-r2-LL3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -174,9 +175,27 @@
             </objects>
             <point key="canvasLocation" x="140" y="137.18140929535232"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="RTt-ez-Ohd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bXF-ru-ABW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GHn-sF-JXj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="RiZ-ae-n6x" kind="relationship" relationship="rootViewController" id="fHQ-gG-vbS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E6v-Ll-gI9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2120.8000000000002" y="134.48275862068968"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="236C6633-D4E6-46AD-AD19-D3BEFD233F96" width="826" height="720">
+        <image name="D7046493-7F09-4583-9F50-7729A36F4414" width="826" height="720">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOjtYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISgrLjQ3VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
