--- a/NoBroker/Base.lproj/Main.storyboard
+++ b/NoBroker/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Quf-GH-y1B">
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3nR-MD-Nl0">
-                                        <frame key="frameInset" minX="2" minY="-77" width="371" height="227"/>
+                                        <frame key="frameInset" minX="2" minY="-62" width="371" height="212"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6vb-XX-hYa">
@@ -75,13 +75,13 @@
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="QSY-aD-osA" customClass="Property_Cell" customModule="TestApp" customModuleProvider="target">
-                                                <rect key="frame" x="64" y="22" width="250" height="120"/>
+                                                <rect key="frame" x="64" y="14" width="250" height="120"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                     <rect key="frame" x="0.0" y="0.0" width="250" height="120"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="D7046493-7F09-4583-9F50-7729A36F4414" translatesAutoresizingMaskIntoConstraints="NO" id="Ibc-zP-ahF">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="8F01A0CD-97FE-4E25-AF59-518B55DC29F5" translatesAutoresizingMaskIntoConstraints="NO" id="Ibc-zP-ahF">
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="116" id="i8N-qi-C6k"/>
                                                                 <constraint firstAttribute="width" constant="108" id="uJM-Qh-CGa"/>
@@ -162,7 +162,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="o6X-OQ-DdJ" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VmP-r2-LL3">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="VmP-r2-LL3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -180,7 +180,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bXF-ru-ABW" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GHn-sF-JXj">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="GHn-sF-JXj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -195,7 +195,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="D7046493-7F09-4583-9F50-7729A36F4414" width="826" height="720">
+        <image name="8F01A0CD-97FE-4E25-AF59-518B55DC29F5" width="826" height="720">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOjtYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISgrLjQ3VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
